--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="row"> <!-- Buat dulu row nya-->
             <div class="col">
-                <h1 class="text-center mt-5 mb-5">DAFTAR BUKU</h1>
+                <h1 class="text-center mt-5 mb-5">DAFTAR ACCESSORIES</h1>
             </div>
         </div>
         <div class="row">
@@ -53,9 +53,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/buku/buku2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Komik Antologi Misteri Shivers Volume 6 Reon</h5>
-                        <p class="card-text">re:ON Comics Infinite menghadirkan antologi komik misteri: Shivers, komik
-                            dengan cerita dan materi yang lebih menantang.</p>
+                        <h5 class="card-title">Gantungan Kunci Anime</h5>
+                        <p class="card-text">Bisa Digunakan </p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
