--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="img/buku/buku2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Gantungan Kunci Anime</h5>
-                        <p class="card-text">Bisa Digunakan </p>
+                        <p class="card-text">Bisa Digununakan Untuk Gantungan Tas Maupun Gantungan Kunci</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
@@ -65,9 +65,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/buku/buku3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Komik Me vs Big Slacker Baby Volume 3</h5>
-                        <p class="card-text">rin dan Alvan sudah memasuki tingkat terakhir kelas XII. Arin kebingungan
-                            ingin melanjutkan ke universitas mana dan jurusan apa</p>
+                        <h5 class="card-title">Nendoroid Anime</h5>
+                        <p class="card-text">Action Figure Anime Yang Berukuran Mini Dan Bagus Untuk Hiasan</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
@@ -78,9 +77,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/buku/buku4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">
-                            Love Letter Komik Reon</h5>
-                        <p class="card-text">Love Letter Komik Reon.</p>
+                        <h5 class="card-title">Action Figure Anime</h5>
+                        <p class="card-text">Action Figure Untuk Menjadi Pajangan Maupun Koleksi</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
@@ -91,12 +89,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/buku/buku1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Komik Nusa Five Volume 2 oleh Sweta Kartika Nusa V Nusantaranger</h5>
-                        <p class="card-text">Komik Nusa Five Volume 2 oleh Sweta Kartika Nusa V Nusantaranger
-
-                            Segera terbit Nusa Five volume kedua dengan 12 halaman tambahan!
-
-                            Dengan chakra energi pemberian Pandita, </p>
+                        <h5 class="card-title">Dakimura</h5>
+                        <p class="card-text">Merupakan Sarung Bantal Jumbo Yang Bergambar Anime Biasa Digunakan Wibu Untuk Berhalusinasi</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
