--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/buku/buku2.jpg" class="card-img-top" alt="...">
+                    <img src="Gantungan.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Gantungan Kunci Anime</h5>
                         <p class="card-text">Bisa Digununakan Untuk Gantungan Tas Maupun Gantungan Kunci</p>
@@ -63,7 +63,7 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/buku/buku3.jpg" class="card-img-top" alt="...">
+                    <img src="Nendoroid.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nendoroid Anime</h5>
                         <p class="card-text">Action Figure Anime Yang Berukuran Mini Dan Bagus Untuk Hiasan</p>
@@ -75,7 +75,7 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/buku/buku4.jpg" class="card-img-top" alt="...">
+                    <img src="ac.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Action Figure Anime</h5>
                         <p class="card-text">Action Figure Untuk Menjadi Pajangan Maupun Koleksi</p>
@@ -87,7 +87,7 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/buku/buku1.jpg" class="card-img-top" alt="...">
+                    <img src="Dakimura.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Dakimura</h5>
                         <p class="card-text">Merupakan Sarung Bantal Jumbo Yang Bergambar Anime Biasa Digunakan Wibu Untuk Berhalusinasi</p>
