--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/book1.jpg" class="d-block w-100" alt="...">
+                <img src="Gantungan.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/book2.jpg" class="d-block w-100" alt="...">
+                <img src="Nendoroid.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/book3.jpg" class="d-block w-100" alt="...">
+                <img src="ac.jpg" class="d-block w-100" alt="...">
             </div>
-        </div>
+            <div class="carousel-item">
+                <img src="Dakimura.jpg" class="d-block w-100" alt="...">
+            </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
