--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Gantungan.jpg" class="d-block w-100" alt="...">
+                <img src="thumb1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="Nendoroid.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="ac.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="Dakimura.jpg" class="d-block w-100" alt="...">
+                <img src="thumb2.jpg" class="d-block w-100" alt="...">
             </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
