--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="ac.jpg" class="card-img-top" alt="...">
+                    <img src="ac1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Action Figure Anime</h5>
                         <p class="card-text">Action Figure Untuk Menjadi Pajangan Maupun Koleksi</p>
