--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style:"width: 100px">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style:"width: 50%">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="thumb1.jpg" class="d-block w-100" alt="...">
